crates/reinhardt-core/crates/macros/tests/ui/inject_with_cache_false.stderr
error: Type must be Injected<T> or OptionalInjected<T> when using #[inject]
 --> tests/ui/routes/fail/inject_with_cache_false.rs:7:53
  |
7 | async fn get_data(#[inject(cache = false)] service: Arc<DataService>) -> Result<(), ()> {
  |                                                     ^^^^^^^^^^^^^^^^

warning: unused import: `std::sync::Arc`
 --> tests/ui/routes/fail/inject_with_cache_false.rs:2:5
  |
2 | use std::sync::Arc;
  |     ^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
